# lutsmith

./: .gitignore  README.md  designdoc.md  pyproject.toml
src/chromaforge/: __init__.py  __main__.py  config.py  errors.py
src/chromaforge/_numba_kernels/: __init__.py  binning.py  interpolation.py
src/chromaforge/cli/: __init__.py  app.py
src/chromaforge/color/: __init__.py  metrics.py  shaper.py  spaces.py
src/chromaforge/core/: __init__.py  distance.py  interpolation.py  laplacian.py  lut.py  matrix.py  solver.py  types.py
src/chromaforge/gui/: __init__.py  app.py  main_window.py  workers.py
src/chromaforge/hald/: reconstruct.py
src/chromaforge/io/: __init__.py  arri.py  cube.py  image.py
src/chromaforge/pipeline/: __init__.py  preprocess.py  refinement.py  runner.py  sampling.py  solving.py  validation.py
src/lutsmith/: __init__.py  __main__.py  config.py  errors.py
src/lutsmith/_numba_kernels/: interpolation.py
src/lutsmith/cli/: __init__.py  app.py
src/lutsmith/color/: shaper.py  spaces.py
src/lutsmith/core/: __init__.py  baseline.py  distance.py  interpolation.py  laplacian.py  lut.py  matrix.py  opponent.py  solver.py  types.py
src/lutsmith/gui/: __init__.py  app.py  main_window.py  workers.py
tests/: conftest.py  test_baseline.py  test_batch_clustering.py  test_batch_pipeline.py  test_batch_reporting.py  test_binning.py  test_cube_io.py  test_hald.py  test_interpolation.py  test_laplacian.py  test_matrix.py  test_opponent.py  test_pipeline.py  test_routing.py  test_security.py  test_shaper.py  test_solver.py  test_validation.py
(+39 files in other folders)
